--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord.js": "^12.5.2",
     "querystring": "^0.2.1",
     "node-fetch": "^2.6.1",
-    "@discordjs/opus": "^0.5.0"
+    "@discordjs/opus": "^0.5.0",
+    "ytdl-core": "^4.4.5"
   },
   "engines": {
     "node": "14.x"
