--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "querystring": "^0.2.1",
     "node-fetch": "^2.6.1",
     "@discordjs/opus": "^0.5.0",
-    "ytdl-core": "^4.4.5"
+    "ytdl-core": "^4.4.5",
+    "request": "^2.88.2"
   },
   "engines": {
     "node": "14.x"
